--- a/src/model/Emotion Detection in Text.ipynb
+++ b/src/model/Emotion Detection in Text.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -27,23 +27,21 @@
     "import seaborn as sns\n",
     "\n",
     "# Load Text Cleaning Pkgs\n",
-    "import neattext.functions as nfx\n",
+    "# import neattext.functions as nfx\n",
     "\n",
     "# Loading ML pkgs\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score, mean_squared_error, confusion_matrix, classification_report\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
     "from sklearn.pipeline import FeatureUnion\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "\n",
     "# Data Transformers and models\n",
-    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score,classification_report,confusion_matrix, f1_score\n",
+    "from sklearn.metrics import accuracy_score,classification_report, f1_score\n",
     "from sklearn.pipeline import Pipeline, FeatureUnion, FunctionTransformer\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "# from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.calibration import CalibratedClassifierCV\n",
     "\n",
@@ -52,7 +50,6 @@
     "\n",
     "# Stemming and Cleaning helpers\n",
     "import spacy\n",
-    "from nltk.stem import PorterStemmer\n",
     "from neattext.functions import remove_punctuations, remove_userhandles, remove_stopwords, remove_special_characters, remove_numbers\n",
     "\n",
     "spacy.prefer_gpu()"
